--- a/LOGIN.html
+++ b/LOGIN.html
@@ -50,24 +50,24 @@
     <span></span>
    
     <ul id="menu">
-      <b href="#">
+      <a href="LOGIN.html">
         <li>Home</li>
-      </b>
-      <b href="#">
+      </a>
+      <a href="articles.html">
         <li>Articles</li>
-      </b>
-      <b href="#">
-        <li>Videos</li>
-      </b>
-      <b href="#">
-        <li>Contact</li>
-      </b>
-      <b href="#">
+      </a>
+      <a href="Calc.html">
+        <li>Calorie calculator</li>
+      </a>
+      <a href="bmi.html">
+        <li>Body mass index</li>
+      </a>
+      <a href="#">
         <li>Challenges</li>
-      </b>
-		 <b href="#">
-        <li>Community</li>
-		</b>
+      </a>
+		 <a href="diet.html">
+        <li>Diet</li>
+		</a>
     </ul>
   </div>
 </nav>
@@ -88,9 +88,7 @@ Do something today that your future self will thank you for
           <div class="face back"> 
             <div class="inner text-center"> 
               <h4>Calculeaza cate calorii trebuie sa consumi!</h4>
-
-			  <button type="button" class="btn btn-default">Know More</button>
-			  
+			  <a href="Calc.html"><button type="button" class="btn btn-default" style="margin-top: 60%;">Know More</button></a>		  
             </div>
           </div>
         </div>	 
@@ -109,7 +107,7 @@ Do something today that your future self will thank you for
           <div class="face back"> 
             <div class="inner text-center"> 
                  <h4>O dieta sanatoasa este cea mai buna cale de a prevenit si controla problemele de sanatate cum ar fi probleme de inima , tensiune arteriala crescuta  , type 2 diabet si unele forme de cancer.</h4>
-              <button type="button" class="btn btn-default">Know More</button>
+              <a href="diet.html"><button type="button" class="btn btn-default" style="margin-top: 40%;">Know More</button></a>
             </div>
           </div>
 		  </div>
@@ -129,7 +127,7 @@ Do something today that your future self will thank you for
           <div class="face back"> 
             <div class="inner text-center"> 
                 <h4>Principalul beneficiu al oricarui tip de antrenament este imbunatatirea sistemului cardiovascular. Dar ceea ce nu se stie este ca antrenamentul regulat are serioase beneficii pentru functionalitatile creerului.</h4>
-              <button type="button" class="btn btn-default">Know More</button>
+             <a href="bmi.html"<button type="button" class="btn btn-default" style="margin-top: 40%;">Know More</button></a>
             </div>
 			</div>
           </div>
@@ -137,14 +135,6 @@ Do something today that your future self will thank you for
       </div>
     </div>
   </div>
-
-
-
-
- 
-    
-
-
 	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
