--- a/bmi.html
+++ b/bmi.html
@@ -48,37 +48,31 @@
     <span></span>
    
     <ul id="menu">
-      <b href="#">
+      <a href="LOGIN.html">
         <li>Home</li>
-      </b>
-      <b href="#">
+      </a>
+      <a href="articles.html">
         <li>Articles</li>
-      </b>
-      <b href="#">
-        <li>Videos</li>
-      </b>
-      <b href="#">
-        <li>Contact</li>
-      </b>
-      <b href="#">
+      </a>
+      <a href="Calc.html">
+        <li>Calorie calculator</li>
+      </a>
+      <a href="bmi.html">
+        <li>Body mass index</li>
+      </a>
+      <a href="#">
         <li>Challenges</li>
-      </b>
-		 <b href="#">
-        <li>Community</li>
-		</b>
+      </a>
+		 <a href="diet.html">
+        <li>Diet</li>
+		</a>
     </ul>
   </div>
 </nav>
 <section class="container">
-  <div class="row">
-      <div class="float-right"><a href="#nav" class="btn btn-blue" id="nav-toggle"></a>
-      </div>
-  </div>
-  <div class="row float-right"></div>
-  <div class="row space-top content">
-    <div class="col-12 col-sm-3 col-lg-2">
 
-    </div>
+  <div class="row float-right"></div>
+  
     <!-- Left sidebar -->
     <div class="col-12 col-sm-9 col-lg-7"> 
 
@@ -181,43 +175,14 @@ function toggleMe(trigger, div) {
       </div>
 	
 	
-	 <div class="col-12 col-sm-12 col-lg-3 visible-lg">		 	      
-    </div>
+	 
 
  </div>
 
-  <!-- row -->
-    <div class="row"> 
-    <!-- FD_Footer_Resp -->
-    <div class="space-top-large space-bottom text-center fd-footer-resp"><ins class="adsbygoogle adfooter"
-     data-ad-client="ca-pub-7631617293200731" data-ad-slot="5599647471" data-ad-format="auto"></ins> 
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script> 
-    </div>
-  </div>
-  <footer class="row text-muted space-top-large text-center">
-    <div class="testimonials float-center group">
-      <p id="quotetext" class="no-space-bottom">"I just wanted to say how great this site is.  The Macro-Nutrient and Daily Calorie Needs calculators I use all the time. Thank you!"</p>
-      <p class="no-space-bottom text-bold float-right text-tiny">- <span id="quoteauthor">Terra</span></p>
-    </div>
-    <div class="col-12" >
-      <div class="text-small space-top-large"> <strong><a href="/d/about">About</a></strong> | <strong><a href="/d/contact">Contact</a></strong> | <a href="/d/terms">Terms</a></div>
-      <div class="text-tiny space-top"> Some links are affiliate links, so if you decide to purchase a book or plan listed, you will be helping us. <br />
-        &copy;2018 Freedieting.com</div>
-    </div>
-  </footer>
+
+ 
 </section>
-<!-- Container --> 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-173377-1', 'auto');
-  ga('send', 'pageview');
-
-  
-</script>
 <script  src="bmi.js" type="text/javascript"></script>
 
 </body>
