--- a/datepicker.html
+++ b/datepicker.html
@@ -34,6 +34,12 @@
             <input type="text"  id="validMinMaxDatepicker" name="validMinMaxDatepicker"  class="dpDate"> 
 			<input type="text" oninput="this.value = this.value.replace(/[^A-Za-z]/g, ''); this.value = this.value.replace(/(\..*)\./g, '$1');" > 
 			<input type="text" oninput="this.value = this.value.replace(/[^0-9.]/g, ''); this.value = this.value.replace(/(\..*)\./g, '$1');" > 
+			<input type="text" oninput="this.value = this.value.replace(/[^0-9.]/g, ''); this.value = this.value.replace(/(\..*)\./g, '$1');" > 
+			<input type="text" name="height" oninput="this.value = this.value.replace(/[^0-9.]/g, ''); this.value = this.value.replace(/(\..*)\./g, '$1');" > 
+			((0|1|2)[\,.](\d{2}))$
+			<input type="text" name="weight" oninput="this.value = this.value.replace(/[^0-9.]/g, ''); this.value = this.value.replace(/(\..*)\./g, '$1');" > 
+
+			
         </p>
         <input type="submit" value="Submit">
     </form>
